# kbc-django

./: pyproject.toml  test_validators.py  validators.py
mysite/: .env.example  docker-compose.yml
mysite/blog/: admin.py  forms.py  models.py  models_legacy.py  urls.py  validators.py  views.py
mysite/blog/migrations/: 0001.py  0002.py  0003.py  0004.py  0005.py  0006.py  0007.py  0008.py  0009.py
mysite/blog/templates/blog/: base.html  blog_form.html  blog_list_static_example.html  blog_update_success.html  comment_form.html  comment_success.html  detail_preview.html  review_form.html  review_success.html  search.html
mysite/blog/templatetags/: blog_filters.py
mysite/blog/tests/: conftest.py  test_models.py  test_views.py
mysite/mysite/: settings.py  settings_test.py
notebooks/: lesson06a.ipynb  lesson06b.ipynb  lesson06c.ipynb  lesson07a.ipynb  lesson07b.ipynb  lesson07c.ipynb  lesson08a.ipynb  lesson08b.ipynb  lesson08c.ipynb  lesson09a.ipynb  lesson09b.ipynb  lesson09c.ipynb  lesson11a.ipynb  lesson11b.ipynb  lesson11c.ipynb  lesson13a.ipynb  lesson13b.ipynb  lesson13c.ipynb  lesson15a.ipynb  lesson15b.ipynb  lesson15c.ipynb
src/: script.py
tests/: conftest.py  test_script.py
