[project]
name = "kbc-django-copy"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "mssql-django>=1.7",
    "pyodbc>=5.3.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
python_files = ["tests.py", "test_*.py"]
